--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,22 @@
+# Core web framework
+fastapi>=0.104.1
+uvicorn[standard]>=0.24.0
 
+# Configuration management
 python-decouple
+
+# HTTP client
+requests>=2.31.0
+
+# AI/ML dependencies
+sentence-transformers>=2.2.2
+
+# Testing
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+
+# Data validation (included with FastAPI but explicit for clarity)
+pydantic>=2.4.0
+
+# Optional: Development tools
+pytest-cov>=4.1.0  # For test coverage
