Refactor imports and improve code structure across multiple files
- Organized and optimized import statements in various modules for better readability and maintainability.
- Updated type hints to use `list` and `dict` instead of `List` and `Dict` for consistency with Python 3.9+ standards.
- Enhanced error messages and logging for improved debugging and user feedback.
- Cleaned up unnecessary code and comments to streamline the codebase.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@
 line-length = 88
 indent-width = 4
 
+[tool.ruff.lint]
 # List of rules to enable. "F" is for Pyflakes, "E" and "W" are for pycodestyle.
 # "I" is for isort (import sorting).
 select = ["E", "F", "W", "I", "UP"]
@@ -11,7 +12,6 @@ select = ["E", "F", "W", "I", "UP"]
 # E501: Line too long (handled by the formatter)
 # E731: Do not assign a lambda expression, use a def
 ignore = ["E501", "E731"]
-
 
 [tool.ruff.format]
 # Use single quotes for strings where possible.
